# smart-desk-monitor

./: .gitignore  LICENSE  README.md  compare_videos.py  generate_report.py  pyproject.toml
.github/workflows/: ci.yml
assets/: create_demo_gif.py
examples/: demo.ipynb
src/smart_desk_monitor/: __init__.py  cli.py  config.py  pipeline.py
src/smart_desk_monitor/detection/: __init__.py  base.py  mask_rcnn.py
src/smart_desk_monitor/io/: __init__.py  export.py  video.py
src/smart_desk_monitor/tracking/: __init__.py  association.py  kalman.py  sort_tracker.py
tests/: test_config.py  test_detection.py  test_tracking.py
tests/evaluation/: test_analyzer.py  test_metrics.py  test_reporter.py
